# nvidia-fan-control

./: Cargo.toml  README.md
Bash_version/: nvidia-fan-ctrl.sh
src/: amdgpu.rs  calculations.rs  checksum_func.rs  colour_math.rs  compile_flag_helper.rs  main.rs  update_func_logic.rs
