[package]
name = "rust-gpu-fan-control"
version = "0.0.3"
edition = "2021"

[dependencies]
termsize = "0.1.6"
ctrlc = "3.4.4"
owo-colors = "4.0.0"
clap = { version = "4.5.4", features = ["std", "cargo", "help", "usage"], default-features = false }
reqwest = { version = "0.12.3", default-features = false, features = ["default-tls", "blocking"] }
serde_json = "1.0.115"
tokio = { version = "1.37.0", features = ["rt-multi-thread"], default-features = false }
indicatif = { default-features = false, version = "0.17.8" }

[features]
fan_amount_2 = []
fan_amount_3 = []
fan_amount_4 = []

[profile.release]
opt-level = 'z'     # Optimize for size
lto = true          # Enable link-time optimization
codegen-units = 1   # Reduce number of codegen units to increase optimizations
panic = 'abort'     # Abort on panic
strip = true        # Strip symbols from binary*
