[package]
name = "rust-gpu-fan-control"
version = "0.1.5"
edition = "2021"

[dependencies]
termion = "4.0.3"
ctrlc = "3.4.5"
owo-colors = "4.1.0"
clap = { version = "4.5.21", features = [
    "std",
    "cargo",
    "help",
    "usage",
], default-features = false }
reqwest = { version = "0.12.9", default-features = false, features = [
    "blocking",
    "rustls-tls",
] }
serde_json = "1.0.133"
tokio = { version = "1.41.1", features = [], default-features = false }
indicatif = { default-features = false, version = "0.17.9" }
sha2 = "0.11.0-pre.4"

[features]
fan_amount_2 = []
fan_amount_3 = []
fan_amount_4 = []

[profile.release]
opt-level = 'z'   # Optimize for size
lto = true        # Enable link-time optimization
codegen-units = 1 # Reduce number of codegen units to increase optimizations
panic = 'abort'   # Abort on panic
strip = true      # Strip symbols from binary*
